# snakeSDL

./: CMakeLists.txt  README.md
include/: game.h
src/: game.c  main.c
